--- a/Site-Dashboard/site.jogos.html
+++ b/Site-Dashboard/site.jogos.html
@@ -78,6 +78,7 @@
             <span class="texto">Quantidade de gols</span>
             <input type="number" id="input_gols" class="format">
             <button onclick="gols()" class="botao">Enviar</button>
+            <div id="div_resultado"></div>
             <div class="barra"></div>
         </div>
         <div class="direita">
@@ -88,12 +89,13 @@
             </div>
             <div class="barra"></div>
             <span class="texto"> Digite o nome de quem deu assistência no jogo</span>
-            <input type="text" id="input_nome_assistencia" class="format">
+            <input type="text" id="input_nome_assistencia" required class="format">
             <span class="texto">Sobrenome</span>
             <input type="text" id="input_sobrenome_assistencia" class="format">
             <span class="texto">Quantidade de assistência</span>
             <input type="number" id="input_assistencia" class="format">
             <button onclick="assistencias()" class="botao">Enviar</button>
+            <div id="div_resultado"></div>
             <div class="barra"></div>
         </div>
     </div>
