--- a/Site-Dashboard/site.treino.html
+++ b/Site-Dashboard/site.treino.html
@@ -55,6 +55,7 @@
             <span class="texto">Quantidade de gols</span>
             <input type="number" id="input_gols" class="format">
             <button onclick="gols()" class="botao">Enviar</button>
+            <div id="div_resultado"></div>
             <div class="barra"></div>
         </div>
         <div class="direita">
@@ -71,6 +72,7 @@
             <span class="texto">Quantidade de assistência</span>
             <input type="number" id="input_assistencia" class="format">
             <button onclick="assistencias()" class="botao">Enviar</button>
+            <div id="div_resultado"></div>
             <div class="barra"></div>
         </div>
     </div>
