--- a/Site-Dashboard/site.cadastro.html
+++ b/Site-Dashboard/site.cadastro.html
@@ -33,6 +33,10 @@
         <form>
             <div class="campos">
                 <div class="cadastrar">
+                    <label for="nome" class="cadastrar-label-5">Nome</label>
+                    <input type="text" id="input_nome" placeholder="Seu nome">
+                </div>
+                <div class="cadastrar">
                     <label for="email" class="cadastrar-label-1">Endereço de email</label>
                     <input type="email" id="input_email" placeholder="Seu email">
                 </div>
