--- a/Site-Institucional/site.contato.html
+++ b/Site-Institucional/site.contato.html
@@ -42,27 +42,26 @@
                 </div>
 
                 <div class="direita">
-
-                    <div class="input-container">
+                    <div class="input-container" >
                         <label for="label_nome">Nome Completo</label>
-                        <input type="text" id="input_nome" placeholder="Digite o seu nome completo" required>
+                        <input type="text" required id="input_nome" placeholder="Digite o seu nome completo">
                     </div>
 
                     <div class="input-container">
                         <label for="label_email">Email</label>
-                        <input type="email" id="input_email" placeholder="Digite o seu email" required>
+                        <input type="email" required id="input_email" placeholder="Digite o seu email" >
                     </div>
 
                     <div class="input-container">
                         <label for="label_assunto">Assunto</label>
-                        <input type="text" id="input_assunto" placeholder="Digite o assunto" required>
+                        <input type="text" required id="input_assunto" placeholder="Digite o assunto" >
                     </div>
                     <div class="input-container">
                         <label for="label_problema">Escreva mais sobre o seu problema</label>
-                        <input type="text" id="input_problema" placeholder="Descreva seu problema..." required>
+                        <input type="text" required id="input_problema" placeholder="Descreva seu problema..." >
                     </div>
                     <div class="input-container">
-                        <input class="botao-enviar" type="button" value="Enviar" />
+                        <button onclick="enviar()" class="botao-enviar">Enviar</button>
                     </div>
                 </div>
             </div>
