Update Banco de dados + Modelagem + WDV cadastro e login

--- a/Site-Dashboard/public/dashboard/site.jogos.html
+++ b/Site-Dashboard/public/dashboard/site.jogos.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.jogo.css">
-    <link rel="shortcut icon" href="../Site-Institucional/assent/Escudo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.jogo.css">
+    <link rel="shortcut icon" href="../assent/Escudo.png" type="image/x-icon">
     <title>Ministério | Jogos</title>
 
 </head>
@@ -13,20 +13,20 @@
 <body>
     <header>
         <div id="logo-Ministerio">
-            <a href="site.index.html">
-                <img src="../Site-Institucional/assent/Escudo.png" alt="escudo">
+            <a href="../site.index.htmlsite.index.html">
+                <img src="../assent/Escudo.png" alt="escudo">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="site.index.html">INICIO</a></li>
+                <li><a href="../site.index.html">INICIO</a></li>
                 <li><a href="site.jogos.html">JOGOS</a></li>
                 <li><a href="site.treino.html">TREINOS</a></li>
             </ul>
         </nav>
         <div id="logo-Sair">
-            <a href="site.login.html">
-                <img src="../Site-Institucional/assent/sair (1).png" alt="sair">
+            <a href="../site.login.html">
+                <img src="../assent/sair (1).png" alt="sair">
             </a>
         </div>
     </header>
@@ -35,32 +35,32 @@
             <h1 class="titulo">Copa Noturna</h1>
             <div class="barra"></div>
             <div class="card">
-                <span><img src="../Site-Institucional/assent/Escudo.png" alt=""> Mini. De Esporte x Rb P.S.A <img src="../Site-Institucional/assent/rbPSA.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Rb P.S.A <img src="../Site-Institucional/assent/rbPSA.png" alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../Site-Institucional/assent/Escudo.png" alt=""> Mini. De Esporte x America FC P.S.A <img src="../Site-Institucional/assent/America.png" alt="">
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x America FC P.S.A <img src="../Site-Institucional/assent/America.png" alt="">
                 </span>
             </div>
             <div class="card">
-                <span><img src="../Site-Institucional/assent/Escudo.png" alt=""> Mini. De Esporte x Fluminense S.C P.S.A <img src="../Site-Institucional/assent/Fluminense.png" alt="">
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Fluminense S.C P.S.A <img src="../Site-Institucional/assent/Fluminense.png" alt="">
                     </span>
             </div>
             <div class="card">
-                <span><img src="../Site-Institucional/assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../Site-Institucional/assent/Trevo.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../Site-Institucional/assent/Trevo.png" alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../Site-Institucional/assent/Escudo.png" alt=""> Mini. De Esporte x Selecionados 
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Selecionados 
                     F.C <img src="../Site-Institucional/assent/Selecionados.png" alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../Site-Institucional/assent/Escudo.png" alt=""> Mini. De Esporte x JD. Mazza<img src="../Site-Institucional/assent/Mazza.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x JD. Mazza<img src="../Site-Institucional/assent/Mazza.png" alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../Site-Institucional/assent/Escudo.png" alt=""> Mini. De Esporte x Fluminense S.C
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Fluminense S.C
                     P.S.A <img src="../Site-Institucional/assent/Fluminense.png" alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../Site-Institucional/assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../Site-Institucional/assent/Trevo.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../Site-Institucional/assent/Trevo.png" alt=""></span>
             </div>
             <div class="barra"></div>
         </div>
@@ -103,5 +103,5 @@
 
 </html>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="cod.grafico.jogo.js"></script>
-<script src="cod.jogos.js"></script>
+<script src="../js/cod.grafico.jogo.js"></script>
+<script src="../js/cod.jogos.js"></script>
