--- a/Site-Dashboard/public/dashboard/site.treino.html
+++ b/Site-Dashboard/public/dashboard/site.treino.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.treino.css">
-    <link rel="shortcut icon" href="../Site-Institucional/assent/Escudo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.treino.css">
+    <link rel="shortcut icon" href="../assent/Escudo.png" type="image/x-icon">
     <title>Ministério | Treino</title>
 
 </head>
@@ -13,20 +13,20 @@
 <body>
     <header>
         <div id="logo-Ministerio">
-            <a href="site.index.html">
-                <img src="../Site-Institucional/assent/Escudo.png" alt="escudo">
+            <a href="../site.index.html">
+                <img src="../assent/Escudo.png" alt="escudo">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="site.index.html">INICIO</a></li>
+                <li><a href="../site.index.html">INICIO</a></li>
                 <li><a href="site.jogos.html">JOGOS</a></li>
                 <li><a href="site.treino.html">TREINOS</a></li>
             </ul>
         </nav>
         <div id="logo-Sair">
-            <a href="site.login.html">
-                <img src="../Site-Institucional/assent/sair (1).png" alt="sair">
+            <a href="../site.login.html">
+                <img src="../assent/sair (1).png" alt="sair">
             </a>
         </div>
     </header>
@@ -80,5 +80,5 @@
 
 </html>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="cod.grafico.treino.js"></script>
-<script src="cod.treino.js"></script>
+<script src="../js/cod.grafico.treino.js"></script>
+<script src="../js/cod.treino.js"></script>
