--- a/Site-Dashboard/public/site.cadastro.html
+++ b/Site-Dashboard/public/site.cadastro.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.cadastro.css">
-    <link rel="shortcut icon" href="../Site-Institucional/assent/Escudo.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.cadastro.css">
+    <link rel="shortcut icon" href="assent/Escudo.png" type="image/x-icon">
     <title>Ministério | Cadastro</title>
 </head>
 
 <body>
     <header>
         <div id="logo-Ministerio">
-            <a href="../Site-Institucional/site.index.html">
-                <img src="../Site-Institucional/assent/Escudo.png" alt="escudo">
+            <a href="index.html">
+                <img src="assent/Escudo.png" alt="escudo">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="../Site-Institucional/site.index.html">INICIO</a></li>
-                <li><a href="../Site-Institucional/site.sobre-nos.html">SOBRE NÓS</a></li>
-                <li><a href="../Site-Institucional/site.Contato.html">CONTATO</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="site.sobre-nos.html">SOBRE NÓS</a></li>
+                <li><a href="site.contato.html">CONTATO</a></li>
             </ul>
         </nav>
         <div class="container-login">
@@ -71,4 +71,4 @@
 </html>
 
 
-<script src="cod.verificacao.js"></script>
+<script src="js/cod.cadastro.js"></script>
