--- a/Site-Dashboard/public/site.contato.html
+++ b/Site-Dashboard/public/site.contato.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.contato.css">
+    <link rel="stylesheet" href="css/style.contato.css">
     <link rel="shortcut icon" href="assent/Escudo.png" type="image/x-icon">
     <title>Ministério | Contato</title>
 </head>
@@ -12,19 +12,19 @@
 <body>
     <header>
         <div id="logo-Ministerio">
-            <a href="site.index.html">
+            <a href="index.html">
                 <img src="assent/Escudo.png" alt="escudo">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="site.index.html">INICIO</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="site.sobre-nos.html">SOBRE NÓS</a></li>
                 <li><a href="site.Contato.html">CONTATO</a></li>
             </ul>
         </nav>
         <div class="container-login">
-            <a href="../Site-Dashboard/site.login.html" class="login-button">LOGIN</a>
+            <a href="site.login.html" class="login-button">LOGIN</a>
         </div>
     </header>
 
