--- a/Site-Dashboard/public/site_index.html
+++ b/Site-Dashboard/public/site_index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.dashboard.css">
-    <link rel="shortcut icon" href="../Site-Institucional/assent/Escudo.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.dashboard.css">
+    <link rel="shortcut icon" href="assent/Escudo.png" type="image/x-icon">
     <title>Ministério | Início</title>
 
 </head>
@@ -13,20 +13,20 @@
     
     <header>
         <div id="logo-Ministerio">
-            <a href="site.index.html">
-                <img src="../Site-Institucional/assent/Escudo.png" alt="escudo">
+            <a href="site_index.html">
+                <img src="assent/Escudo.png" alt="escudo">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="site.index.html">INICIO</a></li>
-                <li><a href="site.jogos.html">JOGOS</a></li>
-                <li><a href="site.treino.html">TREINOS</a></li>
+                <li><a href="site_index.html">INICIO</a></li>
+                <li><a href="dashboard/site.jogos.html">JOGOS</a></li>
+                <li><a href="dashboard/site.treino.html">TREINOS</a></li>
             </ul>
         </nav>
         <div id="logo-Sair">
             <a href="site.login.html">
-                <img src="../Site-Institucional/assent/sair (1).png" alt="sair">
+                <img src="assent/sair (1).png" alt="sair">
             </a>
         </div>
     </header>
