Cadastro das tabelas + Atualização BD

--- a/Site-Dashboard/public/dashboard/site.jogos.html
+++ b/Site-Dashboard/public/dashboard/site.jogos.html
@@ -13,13 +13,13 @@
 <body>
     <header>
         <div id="logo-Ministerio">
-            <a href="../site.index.htmlsite.index.html">
+            <a href="../site_index.html">
                 <img src="../assent/Escudo.png" alt="escudo">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="../site.index.html">INICIO</a></li>
+                <li><a href="../site_index.html">INICIO</a></li>
                 <li><a href="site.jogos.html">JOGOS</a></li>
                 <li><a href="site.treino.html">TREINOS</a></li>
             </ul>
@@ -35,32 +35,32 @@
             <h1 class="titulo">Copa Noturna</h1>
             <div class="barra"></div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Rb P.S.A <img src="../Site-Institucional/assent/rbPSA.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Rb P.S.A <img src="../assent/rbPSA.png" alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x America FC P.S.A <img src="../Site-Institucional/assent/America.png" alt="">
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x America FC P.S.A <img src="../assent/America.png" alt="">
                 </span>
             </div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Fluminense S.C P.S.A <img src="../Site-Institucional/assent/Fluminense.png" alt="">
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Fluminense S.C P.S.A <img src="../assent/Fluminense.png" alt="">
                     </span>
             </div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../Site-Institucional/assent/Trevo.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../assent/Trevo.png" alt=""></span>
             </div>
             <div class="card">
                 <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Selecionados 
-                    F.C <img src="../Site-Institucional/assent/Selecionados.png" alt=""></span>
+                    F.C <img src="../assent/Selecionados.png" alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x JD. Mazza<img src="../Site-Institucional/assent/Mazza.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x JD. Mazza<img src="../assent/Mazza.png" alt=""></span>
             </div>
             <div class="card">
                 <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Fluminense S.C
-                    P.S.A <img src="../Site-Institucional/assent/Fluminense.png" alt=""></span>
+                    P.S.A <img src="../assent/Fluminense.png" alt=""></span>
             </div>
             <div class="card">
-                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../Site-Institucional/assent/Trevo.png" alt=""></span>
+                <span><img src="../assent/Escudo.png" alt=""> Mini. De Esporte x Trevo <img src="../assent/Trevo.png" alt=""></span>
             </div>
             <div class="barra"></div>
         </div>
@@ -77,7 +77,9 @@
             <input type="text" id="input_sobrenome_gol" class="format">
             <span class="texto">Quantidade de gols</span>
             <input type="number" id="input_gols" class="format">
-            <button onclick="gols()" class="botao">Enviar</button>
+            <span class="texto">Jogo</span>
+            <input type="number" id="input_jogo" class="format">
+            <button onclick="gols()" id="btn_gols" class="botao">Enviar</button>
             <div id="div_resultado"></div>
             <div class="barra"></div>
         </div>
@@ -94,7 +96,9 @@
             <input type="text" id="input_sobrenome_assistencia" class="format">
             <span class="texto">Quantidade de assistência</span>
             <input type="number" id="input_assistencia" class="format">
-            <button onclick="assistencias()" class="botao">Enviar</button>
+            <span class="texto">Jogo</span>
+            <input type="number" id="input_jogo" class="format">
+            <button onclick="assistencias()" id="btn_assistencia" class="botao">Enviar</button>
             <div id="div_resultado"></div>
             <div class="barra"></div>
         </div>
