--- a/Site-Dashboard/public/dashboard/site.treino.html
+++ b/Site-Dashboard/public/dashboard/site.treino.html
@@ -13,13 +13,13 @@
 <body>
     <header>
         <div id="logo-Ministerio">
-            <a href="../site.index.html">
+            <a href="../site_index.html">
                 <img src="../assent/Escudo.png" alt="escudo">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="../site.index.html">INICIO</a></li>
+                <li><a href="../site_index.html">INICIO</a></li>
                 <li><a href="site.jogos.html">JOGOS</a></li>
                 <li><a href="site.treino.html">TREINOS</a></li>
             </ul>
@@ -32,14 +32,22 @@
     </header>
     <div class="tema">
         <div class="esquerda">
-            <div class="barra"></div>
-            <div class="card">
-                <span>Treino Primerio Turno: <br>  10:00 as 12:00 </span>
+            <div id="escudo">
+                    <img src="../assent/Junior soccer-cuate.svg" alt="escudo" class="img-escudo">
             </div>
-            <div class="card">
-                <span>Treino Segundo Turno: <br>  13:00 as 15:00 </span>
+            <div>
+                <div class="barra"></div>
+                <div class="card">
+                    <span>Treino Primerio Turno: <br> 10:00 as 12:00 </span>
+                </div>
+                <div class="card">
+                    <span>Treino Segundo Turno: <br> 13:00 as 15:00 </span>
+                </div>
+                <div class="barra"></div>
             </div>
-            <div class="barra"></div>
+            <div id="escudo-baixo">
+                    <img src="../assent/Soccer-pana.svg" alt="escudo" class="img-escudo">
+            </div>
         </div>
         <div class="meio">
             <h1 class="titulo">Artilheiros</h1>
