--- a/Site-Dashboard/public/site.cadastro.html
+++ b/Site-Dashboard/public/site.cadastro.html
@@ -37,6 +37,10 @@
                     <input type="text" id="input_nome" placeholder="Seu nome">
                 </div>
                 <div class="cadastrar">
+                    <label for="sobrenome" class="cadastrar-label-6">Sobrenome</label>
+                    <input type="text" id="input_sobrenome" placeholder="Seu sobrenome">
+                </div>
+                <div class="cadastrar">
                     <label for="email" class="cadastrar-label-1">Endereço de email</label>
                     <input type="email" id="input_email" placeholder="Seu email">
                 </div>
