Select Gol dos Jogos

--- a/Site-Dashboard/public/dashboard/site.cruzadinha.html
+++ b/Site-Dashboard/public/dashboard/site.cruzadinha.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.cruzadinha.css">
     <link rel="shortcut icon" href="../assent/Escudo.png" type="image/x-icon">
-    <title>Document</title>
+    <title>Ministério | Cruzadinha</title>
 </head>
 
 <body>
     <header>
         <div id="logo-Ministerio">
-            <a href="../site.index.html">
+            <a href="../site_index.html">
                 <img src="../assent/Escudo.png" alt="escudo">
             </a>
         </div>
@@ -77,16 +77,16 @@
 </html>
 
 <script>
-    var special_words = ['CPU', 'ULA', 'Registradores', 'RAM', 'ROM', 'EPROM', 'FLASH', 'Memória de Massa', 'DMA', 'CS', 'Adress Bus', 'Data Bus', 'I5', 'I7', 'Dual Core', 'Quad Core'];
+    var special_words = ['CBF', 'VAR', 'COPA DO MUNDO', 'CAM', 'MÃO', 'Brasil', 'VASCO', 'Memória de Massa', 'DMA', 'CS', 'Adress Bus', 'Data Bus', 'I5', 'I7', 'Dual Core', 'Quad Core'];
 
     var questions_list = [
-        'Qual é a sigla para Central Process Unit?',
-        'Um circuto digital que realiza operações lógicas e aritméticas. Qual é o nome deste componente?',
-        'Tipo de memória que se encontra no topo da hierarquia de memória',
-        'Tipo de memória volátil que tem como nome Random Acess Memory. Qual é a sigla deste componente?',
-        'Tipo de memória não volátil que oferece dados apenas para leitura',
-        'Tipo de memória não volátil que precisa ter seu chip exposto a luz ultravioleta para apagar seu conteúdo',
-        'Tipo particular de EEPROM que mantém as informações armazenadas sem a necessidade de uma fonte de energia elétrica',
+        'Qual é a sigla Confederação Brasileira de Futebol?',
+        'Como é chamado o sistema de arbitragem auxiliado por vídeo no futebol?',
+        'Qual é o nome do principal torneio de futebol entre seleções nacionais, disputado a cada quatro anos?',
+        'Qual é a posição do jogador que é responsável por construir as jogadas no meio-campo e distribuir passes no futebol? (SIGLA)',
+        'Qual é a parte do corpo que um jogador de futebol não pode usar, exceto o goleiro dentro da área?',
+        'Qual é a seleção que mais ganhou copas do mundo',
+        'Qual time tem fama de time rebaixado no Brasil',
         'Tipo de memória que precisa ter seu conteúdo copiado na RAM para poder ser executado pela CPU',
         'Permite que periféricos acessem diretamente a RAM sem ocupar processamento',
         'Também conhecido como Slave Select (SS). Usado para selecionar um ou um conjunto de circuitos que estão conectados no computador',
@@ -134,7 +134,7 @@
                     findCell.innerHTML = word.word2.letter[i];
                     console.log(word.word2.letter[i]);
                 }
-                cell_133.innerHTML = '<span style="color: red; font-size:10px">2</span>U';
+                cell_133.innerHTML = '<span style="color: red; font-size:10px">2</span>V';
 
             }
         },
@@ -148,8 +148,8 @@
                     findCell.innerHTML = word.word3.letter[i];
                     console.log(word.word3.letter[i]);
                 }
-                cell_59.innerHTML = '<span style="color: red; font-size:10px">3_4</span>R';
-                cell_113.innerHTML = '<span style="color: red; font-size:10px">14</span>i';
+                cell_59.innerHTML = '<span style="color: red; font-size:10px">3_4</span>C';
+                cell_113.innerHTML = '<span style="color: red; font-size:10px">14</span>A';
             }
         },
         word4: {
@@ -162,7 +162,7 @@
                     findCell.innerHTML = word.word4.letter[i];
                     console.log(word.word4.letter[i]);
                 }
-                cell_59.innerHTML = '<span style="color: red; font-size:10px">3_4</span>R';
+                cell_59.innerHTML = '<span style="color: red; font-size:10px">3_4</span>C';
             }
         },
         word5: {
