--- a/Site-Dashboard/public/dashboard/site.treino.html
+++ b/Site-Dashboard/public/dashboard/site.treino.html
@@ -31,7 +31,11 @@
         </div>
     </header>
     <div class="tema">
+        <div class="alerta">
+            <div id="div_treino"></div>
+        </div>
         <div class="esquerda">
+            <div id="div_treino"></div>
             <div id="escudo">
                     <img src="../assent/Junior soccer-cuate.svg" alt="escudo" class="img-escudo">
             </div>
@@ -48,6 +52,7 @@
             <div id="escudo-baixo">
                     <img src="../assent/Soccer-pana.svg" alt="escudo" class="img-escudo">
             </div>
+           
         </div>
         <div class="meio">
             <h1 class="titulo">Artilheiros</h1>
@@ -63,7 +68,6 @@
             <span class="texto">Quantidade de gols</span>
             <input type="number" id="input_gols" class="format">
             <button onclick="gols()" class="botao">Enviar</button>
-            <div id="div_resultado"></div>
             <div class="barra"></div>
         </div>
         <div class="direita">
@@ -80,7 +84,6 @@
             <span class="texto">Quantidade de assistência</span>
             <input type="number" id="input_assistencia" class="format">
             <button onclick="assistencias()" class="botao">Enviar</button>
-            <div id="div_resultado"></div>
             <div class="barra"></div>
         </div>
     </div>
