--- a/Site-Dashboard/public/dashboard/site.duvidas.html
+++ b/Site-Dashboard/public/dashboard/site.duvidas.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.duvidas.css">
     <link rel="shortcut icon" href="../assent/Escudo.png" type="image/x-icon">
-    <title>Document</title>
+    <title>Ministério | Duvida</title>
 </head>
 <body>
     <header>
         <div id="logo-Ministerio">
-            <a href="../site.index.html">
+            <a href="../site_index.html">
                 <img src="../assent/Escudo.png" alt="escudo">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="../site.index.html">INICIO</a></li>
+                <li><a href="../site_index.html">INICIO</a></li>
                 <li><a href="site.jogos.html">JOGOS</a></li>
                 <li><a href="site.treino.html">TREINOS</a></li>
             </ul>
