--- a/Site-Dashboard/public/site_index.html
+++ b/Site-Dashboard/public/site_index.html
@@ -45,7 +45,8 @@
             </div>
             <div>
                 <div class="barra"></div>
-                <h1 class="titulo">BEM VINDO</h1>
+                <div id="div_ola">
+                </div>
                 <div class="barra"></div>
                 <span class="texto">Bem-vindo ao seu portal do Ministério do Esporte. Este é o lugar onde você pode
                     acompanhar os jogos, conferir estatísticas dos jogadores dentro de jogos e nos treinos</span>
@@ -57,12 +58,13 @@
         </div>
         <div class="direita">
             <div class="barra"></div>
-            <h1 class="titulo">DUVIDAS</h1>
+            <h1 class="titulo">DÚVIDAS</h1>
             <div class="barra"></div>
             <BUTton class="botao" onclick="duvidas()">DUVIDAS</BUTton>
             <div class="barra"></div>
         </div>
     </div>
+    
 </body>
 
 </html>
@@ -75,4 +77,7 @@
     function jogar() {
         window.location = "../dashboard/site.cruzadinha.html";
     }
+    const nome = sessionStorage.NOME_USUARIO.toUpperCase()
+    const sobrenome = sessionStorage.SOBRENOME_USUARIO.toUpperCase()
+    div_ola.innerHTML = ` <div class="textoCentral"><b style="color: black">OLÁ</b> ${nome} ${sobrenome} </div>`
 </script>
